# src/api/v1/routes.js
@@ -13,24 +13,27 @@ routes.post('/users/login', AuthMiddleware.validateBeforeLogin, AuthController.l
 routes.post('/users/registration', AuthMiddleware.validateBeforeCreate, AuthController.register);
 
 
-routes.get('/brands', BrandController.findAll);
-routes.post('/brands',  BrandController.create);
-routes.get('/brands/:id', BrandController.findById);
-routes.put('/brands/:id', BrandController.update);
-routes.delete('/brands/:id', BrandController.delete);
+routes.get('/brands', AuthMiddleware.validateToken, BrandController.findAll);
+routes.post('/brands', AuthMiddleware.validateToken, BrandController.create);
+routes.get('/brands/:id', AuthMiddleware.validateToken, BrandController.findById);
+routes.put('/brands/:id', AuthMiddleware.validateToken, BrandController.update);
+routes.delete('/brands/:id', AuthMiddleware.validateToken, BrandController.delete);
+routes.get('/brands/vehicles/:brandId', AuthMiddleware.validateToken, VehicleController.findByBrandId);
 
 
-routes.get('/models', ModelController.findAll);
-routes.post('/models', ModelController.create);
-routes.get('/models/:id', ModelController.findById);
-routes.put('/models/:id', ModelController.update);
-routes.delete('/models/:id', ModelController.delete);
+routes.get('/models', AuthMiddleware.validateToken, ModelController.findAll);
+routes.post('/models', AuthMiddleware.validateToken, ModelController.create);
+routes.get('/models/:id', AuthMiddleware.validateToken, ModelController.findById);
+routes.put('/models/:id', AuthMiddleware.validateToken, ModelController.update);
+routes.delete('/models/:id', AuthMiddleware.validateToken, ModelController.delete);
+routes.get('/models/vehicles/:modelId', AuthMiddleware.validateToken, VehicleController.findByModelId);
 
 
-routes.get('/vehicles', VehicleController.findAll);
-routes.post('/vehicles', VehicleController.create);
-routes.get('/vehicles/:id', VehicleController.findById);
-routes.put('/vehicles/:id', VehicleController.update);
-routes.delete('/vehicles/:id', VehicleController.delete);
+routes.get('/vehicles', AuthMiddleware.validateToken, VehicleController.findAll);
+routes.post('/vehicles', AuthMiddleware.validateToken, VehicleController.create);
+routes.get('/vehicles/:id', AuthMiddleware.validateToken, VehicleController.findById);
+routes.put('/vehicles/:id', AuthMiddleware.validateToken, VehicleController.update);
+routes.delete('/vehicles/:id', AuthMiddleware.validateToken, VehicleController.delete);
+
 
 module.exports = routes;
